@@ -1,3 +1,5 @@
+Jan 13, 2013: libarchive 3.1.1 released
+
 Jan 13, 2013: libarchive 3.1.0 released
 
 Dec 07, 2012: Implement functions to manually set the format and filters used.
